Fix spacing on account page

--- a/src/app/accounts/_accounts.hero.tablet.styl
+++ b/src/app/accounts/_accounts.hero.tablet.styl
@@ -2,6 +2,7 @@
   article.account {
     .hero {
       background: none;
+      padding-bottom: 0;
       // margin-bottom: 20px;
 
       .img {
